A.F....... [ZBX-5074] redesigned action configuration page (Eduard)
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Japanese, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1019] updated jQuery to 1.7.2 and jQuery UI to 1.8.20 (Vedmak)
..F....... [ZBXNEXT-829] added Zabbix server availability check (Vedmak)

Bug fixes:
..F....... [ZBX-3782] fixed {HOSTNAME} macro not working in map labels trigger expression macro (Vedmak)
..F....... [ZBX-5236] fixed some map element rendering ignoring the "Problem display" map option (Pavels)
A......... [ZBX-5252] fixed multiple level templated application inheritance (Pavels)
..F....... [ZBX-2183] fixed change column in latest data for items with 'unixtime' units (Vedmak)
A.F....... [ZBX-2055] added flexible intervals and time periods validation (Vedmak)
..F....... [ZBX-5045] fixed audit error message when deleting global macros (Pavels)
..F....... [ZBX-3387] fixed incorrect gui language is shown as active in user profile (Vedmak)
..F....... [ZBX-2046] fixed paging can work incorrectly if elements count changes (Vedmak)
A......... [ZBX-5060] fixed cannot Mass Update inventory mode (Toms)
A......... [ZBX-4929] optimized host groups sql queries (Eduard)
....I..... [ZBX-5168] added missing and fixed existing help_items (Sasha)
........S. [ZBX-5218] fixed generating of triggers without functions when editing a trigger prototype expression (Sasha)
..F....... [ZBX-3001] fixed media sorting in user profile (Vedmak)
..F....... [ZBX-5159] fixed macro resolving in trigger description (Vedmak)
..F....... [ZBX-5144] fixed PostgreSQL injection in the database configuration setup form (Pavels)
A......... [ZBX-5232] fixed import of templated low level discoveries (Pavels)
A......... [ZBX-5232] fixed errors when importing empty low level discoveries and items without applications (Pavels)
A.F....... [ZBX-4007] fixed using screen elements with resources from child nodes (Pavels)